--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
         <li>기후동행카드 시범/정식 시행 간 여론 비교 분석</li>
       </ul>
       <p><a href="https://www.canva.com/design/DAGZtux51-g/47gBWnz96Q-3bcrnKblYyg/edit" target="_blank">보고서 보기</a></p>
+      <p><a href="https://github.com/HoneybeeSJ/reeding_trip" target="_blank">GitHub</a></p>
     </div>
 
     <!-- 예시 -->
